# language-mix

./: CMakeLists.txt  README.md
pass-communicator/: main.F90  sub.cpp
pass-string/: interoperable_type.F90  main.F90  subc.cpp  subf.F90
